styles.css
/* ... */
.search-btn {
  width: 8%;
  padding: 14px 15px 14px 20px;
  background-color: #f18939;
  color: white;
  border: 1px solid #aabcca;
  border-bottom-right-radius: 5px;
  border-top-right-radius: 5px;
}

.search-btn:hover {
  background-color: green;
}

.restaurant-list {
  width: auto;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  align-self: stretch;
}

.card {
  width: 230px;
  border-radius: 5px;
  box-shadow: -1px 5px 10px 5px rgba(42, 42, 42, 0.2);
  padding: 10px;
  margin: 20px;
  cursor: pointer;
}

.card > img {
  width: 100%;
  border-radius: 10px;
}

.card > h5 {
  font-weight: lighter;
}

.card > span {
  display: flex;
  justify-content: space-between;
  margin-top: 8px;
  text-align: center;
}

.card > span > h4 {
  font-weight: bolder;
  font-size: 12px;
  padding: 0 2px 0;
  margin-top: 10px;
}

.card > span > h4:first-child {
  display: flex;
  align-items: center;
  background-color: var(--light-green);
  border-radius: 5px;
  color: white;
  padding: 5px;
  margin-top: 5px;
}

.card > span > h4:first-child .fa-star {
  font-size: 10px;
  padding: 2px 5px 3px 0;
}

.card:hover {
  transform: scale(1.03);
  background-color: lightsteelblue;
}

.footer {
  background-color: #f18939;
  padding: 5px;
  text-align: center;
}

.empty {
  width: 200px;
  border-radius: 5px;
  box-shadow: -1px 5px 10px 5px rgba(42, 42, 42, 0.2);
  padding: 20px;
  background-color: #fea649;
  margin-bottom: 29%;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
}

.empty:hover {
  transform: scale(1.09);
}

.cart {
  text-align: center;
  margin-top: 10px;
}

.restaurant-menu {
  margin-top: 0px;
  min-height: 80vh;
  width: auto;
}
.restaurant-summary {
  display: flex;
  height: 200px;
  justify-content: center;
  align-items: center;
  background-color: lightsteelblue;
  color: black;
}
.restaurant-img {
  width: 250px;
  height: 170px;
  border-radius: 5px;
}
.restaurant-summary-details {
  display: flex;
  flex-direction: column;
  flex-basis: 520px;
  margin: 20px;
}
.restaurant-title {
  font-size: 40px;
  max-width: 540px;
  font-weight: 300;
}
.restaurant-tags {
  white-space: nowrap;
  color: inherit;
  opacity: 0.7;
  font-size: 15px;
  max-width: 540px;
}
.restaurant-details {
  display: flex;
  margin-top: 18px;
  justify-content: space-between;
  align-items: center;
  font-size: 12px;
  font-weight: 600;
  padding-bottom: 10px;
  color: inherit;
  font-weight: 600;
  font-size: 16px;
  max-width: 340px;
}
.restaurant-rating {
  display: flex;
  align-items: center;
  padding: 5px 8px;
  gap: 5px;
  background-color: var(--dark-green);
  border-radius: 5px;
}

.restaurant-menu-content {
  display: flex;
  justify-content: center;
}

.menu-items-container {
  margin-top: 30px;
  width: 850px;
}
.menu-title-wrap {
  padding: 20px;
}
.menu-count {
  margin-top: 14px;
  line-height: 1.3;
  color: rgba(40, 44, 63, 0.45);
  letter-spacing: -0.3px;
  font-size: 1rem;
}

.menu-items-list {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.menu-item {
  display: flex;
  justify-content: space-between;
  max-height: auto;
  padding: 20px;
  border-bottom: rgba(40, 44, 63, 0.45) 0.5px solid;
}
.menu-item-details {
  display: flex;
  flex-direction: column;
  align-self: flex-start;
  width: fit-content;
  overflow: hidden;
}

.item-title {
  width: 60%;
}
.item-desc {
  margin-top: 14px;
  line-height: 1.3;
  color: rgba(40, 44, 63, 0.45);
  width: 60%;
  letter-spacing: -0.3px;
  font-size: 1rem;
}
.item-cost {
  margin-top: 4px;
  font-size: 1rem;
  font-weight: 400;
  color: #3e4152;
  width: 40%;
}

.menu-img-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-end;
  width: 200px;
  overflow: hidden;
}
.menu-item-img {
  height: 100px;
  width: 100px;
  border-radius: 5px;
}
.add-btn {
  background-color: var(--orange);
  color: var(--text-color);
  padding: 8px 25px;
  cursor: pointer;
  outline: none;
  border-color: var(--dark-orange);
  margin-top: 10px;
  border-radius: 5px;
}

.shimmer-container {
  display: flex;
  flex-wrap: wrap;
  gap: 25px;
  justify-content: center;
}
.shimmer-card {
  flex-basis: 250px;
  padding: 10px;
  margin-bottom: 10px;
  border-color: #d3d5df;
  box-shadow: 0 4px 7px 0 rgb(218 220 230 / 60%);
}
.shimmer-title {
  width: 60%;
  margin-top: 10px;
}
.shimmer-tags {
  width: 80%;
  margin-top: 4px;
}
.shimmer-details {
  width: 100%;
  margin-top: 18px;
}
.shimmer-container .shimmer-img {
  height: 144px;
  width: 230px;
}
/*Shimmer Card CSS End*/

/* Shimmer Menu Card CSS Start */

.restaurant-summary .shimmer-img {
  height: 144px;
  width: 230px;
}

.shimmer-menu-card {
  display: flex;
  justify-content: space-evenly;
  width: 848px;
  padding: 10px;
  margin-bottom: 10px;
  border-color: #d3d5df;
  box-shadow: 0 4px 7px 0 rgb(218 220 230 / 60%);
}
.shimmer-item-details {
  width: 438px;
}

.shimmer-img-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-end;
  width: 118px;
  height: 150px;
}
.shimmer-img-wrapper .shimmer-img {
  width: 118px;
  height: 96px;
}

.shimmer-img-wrapper .shimmer-btn {
  width: 94px;
  height: 34px;
  margin-top: 10px;
}

.shimmer-w60 {
  width: 60%;
  margin-top: 10px;
}

.shimmer-w40 {
  width: 40%;
  margin-top: 10px;
}

.shimmer-w20 {
  width: 20%;
  margin-top: 4px;
}
/* Shimmer Menu Card CSS End */

/*Animation to Shimmer Component Card and Menu card Start*/
.stroke {
  height: 15px;
  background: #777;
}
.stroke-color {
  background: #777;
}
.animate {
  animation: shimmer 3s;
  animation-iteration-count: infinite;
  background: linear-gradient(to right, #e6e6e6 5%, #cccccc 25%, #e6e6e6 35%);
  background-size: 1000px 100%;
}
@keyframes shimmer {
  from {
    background-position: -1000px 0;
  }
  to {
    background-position: 1000px 0;
  }
}
/* ... */

